Add example adaptive picture

--- a/index.html
+++ b/index.html
@@ -11,83 +11,31 @@
     <section class="section">
       <article class="article">
         <h2 class="article-title">Title article</h2>
-        <img class="article-pic" src="./assets/images/sea.1.2496908.jpg" alt="sea">
-        <p class="article-content">
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur,
-          sapiente!
-        </p>
-        <p class="article-content">
-          Lorem ipsum dolor sit amet, consectetur adipisicing elit. Illo
-          adipisci, commodi recusandae ducimus aliquam impedit doloribus
-          officiis maxime quam sequi?
-        </p>
-        <p class="article-content">
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Nesciunt fuga
-          dolorum sed? Sequi deserunt itaque iure unde numquam doloremque ea
-          laudantium labore perferendis sunt. A molestiae perferendis aperiam
-          quod modi?
-        </p>
-      </article>
-      <article class="article">
-        <h2 class="article-title">Title article</h2>
-        <img class="article-pic" src="./assets/images/sea.1.2496908.jpg" alt="sea">
-        <p class="article-content">
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur,
-          sapiente!
-        </p>
-        <p class="article-content">
-          Lorem ipsum dolor sit amet, consectetur adipisicing elit. Illo
-          adipisci, commodi recusandae ducimus aliquam impedit doloribus
-          officiis maxime quam sequi?
-        </p>
-        <p class="article-content">
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Nesciunt fuga
-          dolorum sed? Sequi deserunt itaque iure unde numquam doloremque ea
-          laudantium labore perferendis sunt. A molestiae perferendis aperiam
-          quod modi?
-        </p>
-      </article>
-      <article class="article">
-        <h2 class="article-title">Title article</h2>
-        <img class="article-pic" src="./assets/images/sea.1.2496908.jpg" alt="sea">
-        <p class="article-content">
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur,
-          sapiente!
-        </p>
-        <p class="article-content">
-          Lorem ipsum dolor sit amet, consectetur adipisicing elit. Illo
-          adipisci, commodi recusandae ducimus aliquam impedit doloribus
-          officiis maxime quam sequi?
-        </p>
-        <p class="article-content">
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Nesciunt fuga
-          dolorum sed? Sequi deserunt itaque iure unde numquam doloremque ea
-          laudantium labore perferendis sunt. A molestiae perferendis aperiam
-          quod modi?
-        </p>
-      </article>
-      <article class="article">
-        <h2 class="article-title">Title article</h2>
-        <img class="article-pic" src="./assets/images/sea.1.2496908.jpg" alt="sea">
-        <p class="article-content">
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur,
-          sapiente!
-        </p>
-        <p class="article-content">
-          Lorem ipsum dolor sit amet, consectetur adipisicing elit. Illo
-          adipisci, commodi recusandae ducimus aliquam impedit doloribus
-          officiis maxime quam sequi?
-        </p>
-        <p class="article-content">
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Nesciunt fuga
-          dolorum sed? Sequi deserunt itaque iure unde numquam doloremque ea
-          laudantium labore perferendis sunt. A molestiae perferendis aperiam
-          quod modi?
-        </p>
-      </article>
-      <article class="article">
-        <h2 class="article-title">Title article</h2>
-        <img class="article-pic" src="./assets/images/sea.1.2496908.jpg" alt="sea">
+
+        <picture>
+          <source
+            media="(min-width:1024px) and (min-resolution:150dpi)"
+            srcset="./assets/images/sea-w2200.webp" type="image/webp"
+          />
+          <source
+            media="(min-width:920px) and (min-resolution:150dpi)"
+            srcset="./assets/images/sea-w2200.webp"
+          />
+          <source
+            media="(min-width: 1024px) and (min-resolution:72dpi)"
+            srcset="./assets/images/sea-w2200.png" type="image/png"
+          />
+          <source
+            media="(min-width:920px) and (min-resolution:72dpi)"
+            srcset="./assets/images/sea-w900.jpg" type="image/jpeg"
+          />
+          <img
+            class="article-pic"
+            src="./assets/images/sea.1.2496908.jpg"
+            alt="sea"
+          />
+        </picture>
+
         <p class="article-content">
           Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur,
           sapiente!
