--- a/index.html
+++ b/index.html
@@ -4,54 +4,42 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>HTML</title>
+    <link rel="stylesheet" href="./assets/css/reset.css">
+    <!-- fonts.css -->
+    <!-- animate.css -->
+    <link rel="stylesheet" href="./assets/css/custom-grid.css">
     <link rel="stylesheet" href="./style.css" />
-    <link rel="stylesheet" href="./assets/css/article.css" />
+    <!-- article.css -->
   </head>
   <body>
-    <section class="section">
-      <article class="article">
-        <h2 class="article-title">Title article</h2>
-
-        <picture>
-          <source
-            media="(min-width:1024px) and (min-resolution:150dpi)"
-            srcset="./assets/images/sea-w2200.webp" type="image/webp"
-          />
-          <source
-            media="(min-width:920px) and (min-resolution:150dpi)"
-            srcset="./assets/images/sea-w2200.webp"
-          />
-          <source
-            media="(min-width: 1024px) and (min-resolution:72dpi)"
-            srcset="./assets/images/sea-w2200.png" type="image/png"
-          />
-          <source
-            media="(min-width:920px) and (min-resolution:72dpi)"
-            srcset="./assets/images/sea-w900.jpg" type="image/jpeg"
-          />
-          <img
-            class="article-pic"
-            src="./assets/images/sea.1.2496908.jpg"
-            alt="sea"
-          />
-        </picture>
-
-        <p class="article-content">
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur,
-          sapiente!
-        </p>
-        <p class="article-content">
-          Lorem ipsum dolor sit amet, consectetur adipisicing elit. Illo
-          adipisci, commodi recusandae ducimus aliquam impedit doloribus
-          officiis maxime quam sequi?
-        </p>
-        <p class="article-content">
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Nesciunt fuga
-          dolorum sed? Sequi deserunt itaque iure unde numquam doloremque ea
-          laudantium labore perferendis sunt. A molestiae perferendis aperiam
-          quod modi?
-        </p>
-      </article>
+    <section class="container">
+      <div class="row">
+        <div class="col-12 col-sm-6 col-md-3 hidden-lg">
+          <article>
+            <h2>1 title hidden lg</h2>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Natus a nihil molestiae adipisci. Fugiat at minus quo rem dicta et?</p>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Natus a nihil molestiae adipisci. Fugiat at minus quo rem dicta et?</p>
+          </article>
+        </div>
+        <div class="col-12 col-sm-6 col-md-3 hidden show-sm">
+          <article>
+            <h2>2 title hidden extra small show sm</h2>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Natus a nihil molestiae adipisci. Fugiat at minus quo rem dicta et?</p>
+          </article>
+        </div>
+        <div class="col-12 col-sm-6 col-md-3 hidden-sm show-lg">
+          <article>
+            <h2>3 title hidden sm show lg</h2>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Natus a nihil molestiae adipisci. Fugiat at minus quo rem dicta et?</p>
+          </article>
+        </div>
+        <div class="col-12 col-sm-6 col-md-3">
+          <article>
+            <h2>4 title</h2>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Natus a nihil molestiae adipisci. Fugiat at minus quo rem dicta et?</p>
+          </article>
+        </div>
+      </div>
     </section>
   </body>
 </html>
